<resources>
    <!--Tela Principal(Login)-->
    <string name="app_name">HiveStudio</string>
    <string name="mainBtnSignIn">Entrar</string>
    <string name="mainTxtUser">Usuário</string>
    <string name="mainTxtPassword">Senha</string>
    <string name="mainCkbRemindMe">Lembrar de Mim</string>
    <string name="mainLblForgotPassword">Esqueci a Senha</string>
    <string name="mainLblSignUp">Não tem uma conta?</string>

    <!--Tela Perfil Fotógrafo -->
    <string name="pagFotName">Sem nome</string>
    <string name="pagFotRate">Nota</string>
    <string name="pagFotXp">Tempo de Experiência</string>
    <string name="pagFotSolicitar">Solicitar</string>

    <!--Tela Solicitação fotografo -->
    <string name="fotSoliLocal">Localização</string>
    <string name="fotSolibtnSolicitar">Solicitar</string>
    <string name="fotSoliEmail">Email</string>
    <string name="fotSoliName">Nome Completo</string>
    <string name="fotSoliTelCel">Celular</string>
    <string name="fotSoliDesc">Descrição</string>
    <string name="fotSoliOrc">Orçamento</string>
    <string name="fotSoliCpf">CPF</string>
    <string name="fotSoliCpfDig">Dig</string>
    <string name="title_activity_all_fotografos">AllFotografos</string>

    <!--Registro do Cliente-->
    <string name="regCliTitle">Registrar</string>
    <string name="regCliNome">Nome</string>
    <string name="regCliCpf">CPF</string>
    <string name="regCliCpfDig">Dig</string>
    <string name="regCliTel">Telefone</string>
    <string name="regCliCel">Celular</string>
    <string name="regCliEnd">Endereço</string>
    <string name="regCliReg">Registrar</string>
    <string name="regCliCid">Cidade</string>
    <string name="regCliNumEnd">Número</string>
    <string name="regCliComp">Complemento</string>
    <string name="regCliEmail">Email</string>
    <string name="regCliNext">Próximo</string>
    <string name="regCliLog">Login</string>
    <string name="regCliSenha">Senha</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_todos_fotografos">TodosFotografos</string>


</resources>