<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#291A14"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="358dp"
        android:layout_height="638dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="305dp"
            app:srcCompat="@mipmap/hivestudio_logo" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:background="@drawable/radius_textview"
            android:ems="10"
            android:hint="@string/mainTxtUser"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/radius_textview"
            android:ems="10"
            android:hint="@string/mainTxtPassword"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/background_light"
                android:buttonTint="@android:color/background_light"
                android:text="@string/mainCkbRemindMe"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/mainLblForgotPassword"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="179dp"
            android:layout_height="42dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/radius_button"
            android:text="@string/mainBtnSignIn" />

        <TextView
            android:id="@+id/mainLblSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="40dp"
            android:text="@string/mainLblSignUp"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>