<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/smoky_black"
    tools:context=".ContFot">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="0dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="72dp"
                    android:gravity="center"
                    android:text="@string/fotSoliName"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtNomeCli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/radius_textview"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/fotSoliEmail"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtEmailCli"
                    android:layout_width="347dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/radius_textview"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/fotSoliTelCel"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtTelCelCli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/radius_textview"
                    android:ems="10"
                    android:inputType="phone"
                    android:maxLength="10" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="186dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/fotSoliCpf"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="22dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/fotSoliCpfDig"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txtCpfCli"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/radius_textview"
                        android:ems="10"
                        android:inputType="phone"
                        android:maxLength="9" />

                    <EditText
                        android:id="@+id/txtDigCli"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/radius_textview"
                        android:ems="10"
                        android:inputType="phone"
                        android:maxLength="2" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:text="@string/fotSoliOrc"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtOrcaCli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/radius_textview"
                    android:ems="10"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/fotSoliDesc"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/txtDescCli"
                    android:layout_width="353dp"
                    android:layout_height="261dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/radius_textview"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />

                <Button
                    android:id="@+id/btnSoli"
                    android:layout_width="138dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/radius_button_white"
                    android:text="@string/fotSolibtnSolicitar"
                    android:textSize="18sp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>